--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.3.3
-python-telegram-bot==20.7
+python-telegram-bot==13.7  # Daha eski ve kararlı sürüm
 google-generativeai==0.3.2
 requests==2.31.0
+Pillow==9.5.0  # Görüntü işleme için
