--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.3.3
-python-telegram-bot==13.7  # Daha kararlı sürüm
+python-telegram-bot==13.7
 google-generativeai==0.3.2
 requests==2.31.0
+gunicorn==21.2.0
